<resources>
    <string name="app_name">User Onboarding</string>
    <string name="t_and_c_title">Terms and conditions</string>
    <string name="t_and_c">Your access to and use of Lorem Ipsum (the app) is subject exclusively to these Terms
        and Conditions. You will not use the app for any purpose that is unlawful or prohibited by these Terms and
        Conditions. By using the app you are fully accepting the terms, conditions and disclaimers contained in this notice.
        If you do not accept these Terms and Conditions you must immediately stop using the app.</string>
    <string name="welcome">Welcome</string>
    <string name="credentials_title">Credentials</string>
    <string name="info_title">Info</string>
    <string name="pin_title">Pin</string>
    <string name="pin_confirmation_title">Pin confirmation</string>
    <string name="next">Next</string>
    <string name="previous">Back</string>
    <string name="done">Done</string>
    <string name="prompt_email_mandatory">Email</string>
    <string name="prompt_password_mandatory">Password</string>
    <string name="prompt_name_mandatory">Name</string>
    <string name="prompt_pin_mandatory">Pin</string>
    <string name="prompt_last_name_mandatory">Last name</string>
    <string name="prompt_phone_mandatory">Phone</string>
    <string name="mandatory_fields_disclaimer">All fields are mandatory</string>
    <string name="pin_disclaimer">Please add a pin for a fast login</string>
    <string name="pin_confirmation_disclaimer">Please confirm the pin you \nhave entered a few seconds ago</string>
    <string name="generic_error">Wow. Sorry that never happened before</string>
    <string name="password_disclaimer">For safety purposes, you have to fill in the password again.</string>
    <string name="award_disclaimer">Design award 2022</string>

    <string name="welcome_screen_description">Hello and welcome to this assignment.
        We are going to ask you to share, some basic info about you, like the credentials you
    want to use in order to login, some personal info(not going to spam, promise), and finally a pin for your
    own convenience of fast logins. This app is not GDPR complied, yet.</string>
</resources>
