<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/info_title"
        style="@style/Heading"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacing_5x"
        android:gravity="center"
        android:text="@string/info_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name_et"
        style="@style/Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_3x"
        android:layout_marginTop="@dimen/spacing_3x"
        android:layout_marginEnd="@dimen/spacing_3x"
        android:hint="@string/prompt_name_mandatory"
        android:imeOptions="actionNext"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_title" />

    <EditText
        android:id="@+id/lastName_et"
        style="@style/Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_3x"
        android:layout_marginTop="@dimen/spacing_3x"
        android:layout_marginEnd="@dimen/spacing_3x"
        android:hint="@string/prompt_last_name_mandatory"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_et" />

    <EditText
        android:id="@+id/phone_et"
        style="@style/Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_3x"
        android:layout_marginTop="@dimen/spacing_3x"
        android:layout_marginEnd="@dimen/spacing_3x"
        android:inputType="number"
        android:hint="@string/prompt_phone_mandatory"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastName_et" />

    <TextView
        android:id="@+id/disclaimer_tv"
        style="@style/Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_3x"
        android:layout_marginTop="@dimen/spacing_3x"
        android:layout_marginEnd="@dimen/spacing_3x"
        android:text="@string/mandatory_fields_disclaimer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_et" />


    <TextView
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_3x"
        android:layout_marginBottom="@dimen/spacing_3x"
        android:enabled="false"
        android:text="@string/next"
        android:textColor="@color/purple_200"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_3x"
        android:layout_marginBottom="@dimen/spacing_3x"
        android:text="@string/previous"
        android:textColor="@color/purple_500"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
